--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   share_plus: ^12.0.1
   permission_handler: ^12.0.1
   path_provider: ^2.1.5
+  shared_preferences: ^2.5.3
   screenshot: ^3.0.0
   image: ^4.7.2
   onnxruntime: ^1.4.1
